--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "productsapp",
+  "name": "usermanagementapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "swagger-ui-express": "^4.0.7"
   }
 }
